Project 2 In Progress

--- a/test.html
+++ b/test.html
@@ -6,8 +6,18 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
-    <p>Replace me with your codes.</p>
-
+    <h1>Minnesota Sports Teams</h1>
+    
+    <div>
+        <h2>Twins</h2>
+        <img src="Images/twins.jpg" alt="Twins" />
+        <h3>Top Players</h3>
+        <ul>
+            <li>Player One</li>
+            <li>Player Two</li>
+            <li>Player Three</li>
+            <li>Player Four</li>
+        </ul>
+    </div>
 </body>
 </html>
