--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 
     <p>Replace me with your code.</p>
 
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    <script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
